# plugify-source-2

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  cs2-sdk.wplugin  cs2sdk.json  cs2sdk.pplugin  cs2sdk.pplugin.in  cs2sdk.wplugin  plugify-plugin-s2sdk.pplugin.in  s2sdk.json  s2sdk.pplugin.in
.github/workflows/: cmake-multiple-platform.yml  publish-docs.yml
assets/: gamedata.jsonc  settings.json  settings.jsonc
assets/gamedata/: s2sdk.games.txt
cmake/: InitConfigs.cmake  InitDynlibUtils.cmake  InitMetamod.cmake  InitPlugify.cmake  InitSourceSdk.cmake  compat_format.cmake  dynlibutils.cmake  fmt.cmake  linux.cmake  logger.cmake  metamod.cmake  plugify-configs.cmake  plugify.cmake  re2.cmake  shared.cmake  sourcesdk.cmake  windows.cmake
cmake/platform/: shared.cmake
conda/: bld.bat  build.sh  meta.yaml.example
configs/addons/plugify/config/: core.txt
configs/addons/plugify/configs/: core.txt
configs/addons/plugify/gamedata/: cs2sdk.games.txt  old
configs/addons/wizard/gamedata/: cs2sdk.games.txt
docs/: CMakeLists.txt  doxy.in
examples/c#/WithCommands/: WithCommands.csproj  WithCommands.pplugin  WithCommands.sln  WithCommandsPlugin.cs
examples/c#/WithCommands/Properties/: AssemblyInfo.cs
examples/c#/WithCommands/cs2sdk/: cs2sdk.cs
include/: cs2sdk.cs
plg/: plugin.hpp
plugify/: allocator.hpp  any.hpp  cpp_plugin.hpp  format.hpp  numerics.hpp  polyhook.hpp  string.hpp  variant.hpp
polyhook/: polyhook.hpp
schemas/: gamedata.schema  gamedata.schema.json
src/: out.json  pch.h
src/core/: commandmanager.cpp  commandmanager.h  con_command_manager.cpp  con_command_manager.h  con_command_manager.hpp  con_var_manager.cpp  con_var_manager.h  con_var_manager.hpp  console.cpp  console.hpp  core_config.cpp  core_config.h  core_config.hpp  event_listener.cpp  event_listener.hpp  event_manager.cpp  event_manager.h  event_manager.hpp  eventmanager.cpp  eventmanager.h  fwd.h  game_config.cpp  game_config.h  game_config.hpp  gameconfig.cpp  gameconfig.h  gameevents.h  globals.cpp  globals.h  globals.hpp  handle.cpp  handle.hpp  hook_holder.cpp  hook_holder.h  hook_holder.hpp  hook_manager.cpp  hook_manager.h  hookmanager.cpp  hookmanager.h  listener_manager.h  (+38 more)
src/core/cs2_sdk/: README.md  cschemasystem.h  schema.cpp  schema.h
src/core/cs2_sdk/interfaces/: CUtlTSHash.h  cgameresourceserviceserver.h  cs2_interfaces.cpp  cs2_interfaces.h  cschemasystem.h
src/core/logger/: detailed.cpp  detailed.hpp  error.cpp  error.hpp  ilogging.hpp  message.cpp  message.hpp  scope.cpp  scope.hpp  throw_assert.cpp  throw_assert.hpp  warning.cpp  warning.hpp
src/core/sdk/: ccollisionproperty.h  cgameresourceserviceserver.h  cinbuttonstate.h  cschemasystem.h  datatypes.h  recipientfilters.h  schema.cpp  schema.h  services.h  steamnetworkingsockets.h  utils.cpp  utils.h  utils_print.cpp  virtual.h
src/core/sdk/entity/: cbaseentity.h  cbasegamerules.h  cbasemodelentity.h  cbaseplayercontroller.h  cbaseplayerpawn.h  cbasetrigger.h  ccitadelgamerules.h  ccitadelplayercontroller.h  ccitadelplayerpawn.h  ccollisionproperty.h  ccsgamerules.h  ccsplayercontroller.h  ccsplayerpawn.h  ccsteam.h  ccsweaponbase.h  cenventitymaker.h  cgameplayerequip.h  cgameresourceserviceserver.h  cgamerules.h  cinbuttonstate.h  clogiccase.h  cparticlesystem.h  cphysthruster.h  cplayercontroller.h  cplayerpawn.h  cschemasystem.h  ctakedamageinfo.h  cteam.h  ctriggerpush.h  ctriggerteleport.h  cvotecontroller.h  entityio.h  globaltypes.h  lights.h  observer.h  recipientfilters.h  services.h
src/dynohook/: dynohook.h
src/export/: 1.txt  clients.cpp  clients.h  commands.cpp  commands.h  console.cpp  console.h  cvars.cpp  cvars.h  engine.cpp  engine.h  entities.cpp  entities.h  events.cpp  events.h  gameconfig.cpp  gameconfig.h  gamerules.cpp  keyvalues.h  logger.cpp  logger.h  modules.cpp  panarama.cpp  panorama.cpp  schema.cpp  schema.h  timers.cpp  timers.h  user_messages.cpp  voice.cpp  voice.h  weapons.cpp
src/plugify/: compat_format.h  cpp_plugin.h  cpp_plugin.hpp  dynohook.h  polyhook.h  polyhook.hpp  string.h
src/utils/: assembly.cpp  assembly.h  schema.cpp  schema.h  utils.cpp  utils.h  utils_print.cpp  virtual.h
src/wizard/: cpp_plugin.h
sym/: exported_symbols.lds  version_script.lds
